--- a/JS/Async/index.html
+++ b/JS/Async/index.html
@@ -6,7 +6,8 @@
   <title>Async</title>
   <!-- <script src="./callback.js"></script> -->
   <!-- <script src="./promise.js"></script> -->
-  <script src="./callback-to-promise.js"></script>
+  <!-- <script src="./callback-to-promise.js"></script> -->
+  <script src="./async.js"></script>
 </head>
 
 <body></body>
