Feat: add mousemove event

--- a/Books/OOP_Javascript_for_practical_dev/CH01_procedure/painter_main.html
+++ b/Books/OOP_Javascript_for_practical_dev/CH01_procedure/painter_main.html
@@ -78,6 +78,14 @@
       canvas.addEventListener("mousedown", function (e) {
         console.log("mouseDown");
         var pressPoint = relativePosition(e, canvas);
+
+        // register mousemove event listener
+        var mousemoveEventListener = function (e) {
+          // get current mouse position
+          var movePoint = relativePosition(e, canvas);
+        };
+
+        document.addEventListener("mousemove", mousemoveEventListener, false);
       }, false)
     };
 
