Feat: add filling color selector
- 재사용 하기가 힘들다.
- 기능 확장이 어렵다.
- 프로그램 소스 분석이 어렵다.
- 유지보수 하기가 힘들다.
- 많은 인력이 동시에 참여하기엔 부적절하다.

--- a/Books/OOP_Javascript_for_practical_dev/CH01_procedure/painter_main.html
+++ b/Books/OOP_Javascript_for_practical_dev/CH01_procedure/painter_main.html
@@ -159,6 +159,16 @@
       var labelForStrokeColor = createLabelForColor(" 선 색: ", "#FF0000", strokeColorChangeEventListener);
 
       toolbar.appendChild(labelForStrokeColor);
+
+      // add a color selector for filling to toolbar
+      var fillColorChangeEventListener = function (e) {
+        ctx.fillStyle = this.value;
+      };
+
+      // add label component for filling color selector to toolbar
+      var labelForFillColor = createLabelForColor(" 채우기 색: ", "#0000FF", fillColorChangeEventListener);
+
+      toolbar.appendChild(labelForFillColor);
     };
 
     function createButton(imagePath, id) {
