--- a/Books/OOP_Javascript_for_practical_dev/CH06_oop/painter_main.html
+++ b/Books/OOP_Javascript_for_practical_dev/CH06_oop/painter_main.html
@@ -10,6 +10,7 @@
 	<script src="./js/model/painter_model.js"></script>
 	<script src="./js/model/piece/line_piece.js"></script>
 	<script src="./js/model/piece/rectangle_piece.js"></script>
+	<script src="./js/model/piece/ellipse_piece.js"></script>
 	<script src="./js/view/painter_view.js"></script>
 	<script src="./js/view/panel/tool_button_panel.js"></script>
 	<script>
