Feat: add abstract piece

--- a/Books/OOP_Javascript_for_practical_dev/CH06_oop/painter_main.html
+++ b/Books/OOP_Javascript_for_practical_dev/CH06_oop/painter_main.html
@@ -8,6 +8,7 @@
 	<script src="./js/app/painter_constants.js"></script>
 	<script src="./js/app/painter_main.js"></script>
 	<script src="./js/model/painter_model.js"></script>
+	<script src="./js/model/piece/abstract_piece.js"></script>
 	<script src="./js/model/piece/line_piece.js"></script>
 	<script src="./js/model/piece/rectangle_piece.js"></script>
 	<script src="./js/model/piece/ellipse_piece.js"></script>
