Feat: Apply MVC pattern

--- a/Books/OOP_Javascript_for_practical_dev/CH06_oop/painter_main.html
+++ b/Books/OOP_Javascript_for_practical_dev/CH06_oop/painter_main.html
@@ -13,8 +13,10 @@
 	<script src="./js/model/piece/rectangle_piece.js"></script>
 	<script src="./js/model/piece/ellipse_piece.js"></script>
 	<script src="./js/model/piece/free_path_piece.js"></script>
+	<script src="./js/model/struct/point.js"></script>
 	<script src="./js/view/painter_view.js"></script>
 	<script src="./js/view/panel/tool_button_panel.js"></script>
+	<script src="./js/controller/painter_controller.js"></script>
 	<script>
 		window.onload = function () {
 			var painterMain = new PAINTER.app.PainterMain("painter");
