Feat: apply strategy pattern

--- a/Books/OOP_Javascript_for_practical_dev/CH06_oop/painter_main.html
+++ b/Books/OOP_Javascript_for_practical_dev/CH06_oop/painter_main.html
@@ -19,6 +19,12 @@
 	<script src="./js/view/painter_view.js"></script>
 	<script src="./js/view/panel/tool_button_panel.js"></script>
 	<script src="./js/controller/painter_controller.js"></script>
+	<script src="./js/controller/manager/abstract_piece_manager.js"></script>
+	<script src="./js/controller/manager/abstract_bounding_piece_manager.js"></script>
+	<script src="./js/controller/manager/ellipse_piece_manager.js"></script>
+	<script src="./js/controller/manager/free_path_piece_manager.js"></script>
+	<script src="./js/controller/manager/line_piece_manager.js"></script>
+	<script src="./js/controller/manager/rectangle_piece_manager.js"></script>
 
 	<script>
 		window.onload = function () {
