add state pattern

--- a/Books/OOP_Javascript_for_practical_dev/CH06_oop/painter_main.html
+++ b/Books/OOP_Javascript_for_practical_dev/CH06_oop/painter_main.html
@@ -8,6 +8,8 @@
 	<script src="./js/app/painter_constants.js"></script>
 	<script src="./js/controller/observer/ipainter_observer.js"></script>
 	<script src="./js/controller/observer/ipainter_subject.js"></script>
+	<script src="./js/controller/state/icontext.js"></script>
+	<script src="./js/controller/state/istate.js"></script>
 	<script src="./js/app/painter_main.js"></script>
 	<script src="./js/model/painter_model.js"></script>
 	<script src="./js/model/piece/abstract_piece.js"></script>
@@ -25,6 +27,10 @@
 	<script src="./js/controller/manager/free_path_piece_manager.js"></script>
 	<script src="./js/controller/manager/line_piece_manager.js"></script>
 	<script src="./js/controller/manager/rectangle_piece_manager.js"></script>
+	<script src="./js/controller/state/ellipse_state.js"></script>
+	<script src="./js/controller/state/free_path_state.js"></script>
+	<script src="./js/controller/state/line_state.js"></script>
+	<script src="./js/controller/state/rectangle_state.js"></script>
 
 	<script>
 		window.onload = function () {
