Feat: add impl state

--- a/Books/OOP_Javascript_for_practical_dev/CH06_oop/painter_main.html
+++ b/Books/OOP_Javascript_for_practical_dev/CH06_oop/painter_main.html
@@ -27,6 +27,7 @@
 	<script src="./js/controller/manager/free_path_piece_manager.js"></script>
 	<script src="./js/controller/manager/line_piece_manager.js"></script>
 	<script src="./js/controller/manager/rectangle_piece_manager.js"></script>
+	<script src="./js/controller/state/impl_state.js"></script>
 	<script src="./js/controller/state/ellipse_state.js"></script>
 	<script src="./js/controller/state/free_path_state.js"></script>
 	<script src="./js/controller/state/line_state.js"></script>
