--- a/Books/OOP_Javascript_for_practical_dev/CH07_GoF/01_singleton/client_singleton.html
+++ b/Books/OOP_Javascript_for_practical_dev/CH07_GoF/01_singleton/client_singleton.html
@@ -12,7 +12,7 @@
   <script>
     var singleton = CALC.singleton;
 
-    var calculatorSingleton = singleton.OperationSingleton.getInstance();
+    var calculatorSingleton = singleton.OperationSingleton.getInstance(); // 단일 인스턴스 생성(반환)
 
     var firstNumber = 100;
     var secondNumber = 20;
