Scaffolding: CALC common file

--- a/Books/OOP_Javascript_for_practical_dev/CH05_OOP_design_principle/01_single_responsibility_principle/_before/client_main.html
+++ b/Books/OOP_Javascript_for_practical_dev/CH05_OOP_design_principle/01_single_responsibility_principle/_before/client_main.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <script src="../common/js/calc_common.js"></script>
+    <script src="../../common/js/calc_common.js"></script>
     <script src="./js/calculator.js"></script>
     <script src="./js/client.js"></script>
     <script>
