--- a/Books/OOP_Javascript_for_practical_dev/CH05_OOP_design_principle/01_single_responsibility_principle/after/client_main.html
+++ b/Books/OOP_Javascript_for_practical_dev/CH05_OOP_design_principle/01_single_responsibility_principle/after/client_main.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <script src="../common/js/calc_common.js"></script>
+  <script src="../../common/js/calc_common.js"></script>
   <script src="./js/add_operation.js"></script>
   <script src="./js/subtract_operation.js"></script>
   <script src="./js/multiply_operation.js"></script>
