open close principle before_modified

--- a/Books/OOP_Javascript_for_practical_dev/CH05_OOP_design_principle/02_open_close_principle/_before/client_main.html
+++ b/Books/OOP_Javascript_for_practical_dev/CH05_OOP_design_principle/02_open_close_principle/_before/client_main.html
@@ -10,6 +10,7 @@
   <script src="./js/add_operation.js"></script>
   <script src="./js/subtract_operation.js"></script>
   <script src="./js/multiply_operation.js"></script>
+  <script src="./js/divide_operation.js"></script>
   <script src="./js/calculator.js"></script>
   <script src="./js/client.js"></script>
   <script>
