--- a/Books/OOP_Javascript_for_practical_dev/CH05_OOP_design_principle/03_liskov_substitution_principle/_before/client_main.html
+++ b/Books/OOP_Javascript_for_practical_dev/CH05_OOP_design_principle/03_liskov_substitution_principle/_before/client_main.html
@@ -11,6 +11,7 @@
   <script src="./js/add_operation.js"></script>
   <script src="./js/substract_operation.js"></script>
   <script src="./js/multiply_operation.js"></script>
+  <script src="./js/divide_operation.js"></script>
   <script src="./js/calculator.js"></script>
   <script src="./js/client.js"></script>
   <script>
